--- a/Program/Client_Side/index.html
+++ b/Program/Client_Side/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0">
     <title>Appalachian Trail Statistics</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <base href="index.html">
 </head>
 <body>
-    <div id="main-container"></div>
+    <div id="main-container">
+        <div id="map">
+            <script>
+                function initMap() {
+                    var mapOptions = {
+                        center: {lat: 34.6271827, lng: -84.1938217},
+                        zoom: 15,
+                        mapTypeId: google.maps.MapTypeId.ROADMAP
+                    };
+                    var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+                }
+            </script>
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCjde_rx_Fe0v4G_vD-uI33M1o9toMF2A&callback=initMap">
+            </script>
+        </div>
+    </div>
 </body>
 </html>
 
