--- a/Program/Client_Side/index.html
+++ b/Program/Client_Side/index.html
@@ -14,6 +14,10 @@
             <script id="map-script">
                 var map;
                 var shelterLayer;
+                var hiker_start_layer;
+                var hiker_dest_layer;
+                var centerline_layer;
+
                 function initMap() {
                     var mapOptions = {
                         center: {lat: 34.6271827, lng: -84.1938217},
@@ -24,16 +28,13 @@
                     initOverlay();
                 }
                 function initOverlay() {
-
                     var infoWindow = new google.maps.InfoWindow();
-
                     // Initialize the centerline overlay.
-                    var centerlineLayer = new google.maps.FusionTablesLayer({
+                    centerline_layer = new google.maps.FusionTablesLayer({
                         query: {
                             select: 'geometry',
                             from: '1sWS1ydRkfLOprAw__Zh7sKhacoMtJikEHH3kDB_f'
                         },
-                        map: map,
                         suppressInfoWindows: true
                     });
                     shelterLayer = new google.maps.FusionTablesLayer({
@@ -43,6 +44,27 @@
                         },
                         suppressInfoWindows: true
                     });
+                    hiker_start_layer = new google.maps.FusionTablesLayer({
+                        query: {
+                            select: 'start_lat',
+                            from: '1JUAkUL5H7IhU4QrmLuVQ65Tg2SNyI5Xqm3A7Nk1g'
+                        },
+                        heatmap: {
+                            enabled: true
+                        },
+                        suppressInfoWindows: false
+                    });
+                    hiker_dest_layer = new google.maps.FusionTablesLayer({
+                        query: {
+                            select: 'dest_lat',
+                            from: '1JUAkUL5H7IhU4QrmLuVQ65Tg2SNyI5Xqm3A7Nk1g'
+                        },
+                        heatmap: {
+                            enabled: true
+                        },
+                        suppressInfoWindows: false
+                    });
+
                 }
             </script>
             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCjde_rx_Fe0v4G_vD-uI33M1o9toMF2A&callback=initMap">
@@ -76,60 +98,102 @@
                             console.log("Status: " + status);
                         }
                     );
+                    $("#toggle-northbound-hikers-box").attr("checked", true);
+                    $("#toggle-southbound-hikers-box").attr("checked", true);
                 }
             </script>
         </div>
         <div id="dev-controls">
-            <button id="display-shelter-layer-button" type="button">Display Shelters</button>
-            <button id="display-hiker-start-layer-button" type="button">Display Hiker Start Location Layer</button>
-            <button id="display-hiker-dest-layer-button" type="button">Display Hiker Destination Location Layer</button>
+            <button id="toggle-at-centerline-button" type="button">Toggle AT Centerline Layer</button>
+            <button id="toggle-at-shelter-button" type="button">Toggle AT Shelter Layer</button>
+            <button id="toggle-hiker-start-layer-button" type="button">Toggle Hiker Start Location Layer</button>
+            <button id="toggle-hiker-dest-layer-button" type="button">Toggle Hiker Destination Location Layer</button>
+            <input id="toggle-northbound-hikers-box" type="checkbox">Northbound Hikers
+            <input id="toggle-southbound-hikers-box" type="checkbox">Southbound Hikers
+            <input id="toggle-single-point-hikers-box" type="checkbox">Single Point Hikers
             <script type="text/javascript" id="init-hiker-layers-script">
-                var display_shelter_layer_button_pressed = false;
-                var display_hiker_start_layer_button_pressed = false;
-                var display_hiker_dest_layer_button_pressed = false;
+                var toggle_at_centerline_button_pressed = false;
+                var toggle_at_shelter_button_pressed = false;
+                var toggle_hiker_start_layer_button_pressed = false;
+                var toggle_hiker_dest_layer_button_pressed = false;
+                var northbound_hikers_box_checked = true;
+                var southbound_hikers_box_checked = true;
 
                 $("button").click(function() {
                     console.log(this.id + " button was pressed.");
-                    if (this.id == "display-shelter-layer-button") {
+                    if (this.id == "toggle-at-centerline-button") {
+                        //Toggle AT Centerline Layer
+                        if (!toggle_at_centerline_button_pressed) {
+                            centerline_layer.setMap(map);
+                            toggle_at_centerline_button_pressed = true;
+                        } else {
+                            centerline_layer.setMap(null);
+                            toggle_at_centerline_button_pressed = false;
+                        }
+                    } else if (this.id == "toggle-at-shelter-button") {
                         //Toggle AT Shelters Layer
-                        if (!display_shelter_layer_button_pressed) {
+                        if (!toggle_at_shelter_button_pressed) {
                             shelterLayer.setMap(map);
-                            display_shelter_layer_button_pressed = true;
+                            toggle_at_shelter_button_pressed = true;
                         } else {
                             shelterLayer.setMap(null);
-                            display_shelter_layer_button_pressed = false;
+                            toggle_at_shelter_button_pressed = false;
                         }
-                    } else if (this.id == "display-hiker-start-layer-button") {
-                        //Init Hiker Start Location Layer
-                        var hiker_start_layer = new google.maps.FusionTablesLayer({
-                            query: {
-                                select: 'start_lat',
-                                from: '1hDVF1OpgMuSUbWc138-Am7BoVmNjubjfod0AalgH'
-                            },
-                            map: map,
-                            heatmap: {
-                                enabled: true
-                            },
-                            suppressInfoWindows: false
-                        });
-                    } else if (this.id == "display-hiker-dest-layer-button") {
-                        var hiker_dest_layer = new google.maps.FusionTablesLayer({
-                            query: {
-                                select: 'dest_lat',
-                                from: '1hDVF1OpgMuSUbWc138-Am7BoVmNjubjfod0AalgH'
-                            },
-                            map: map,
-                            heatmap: {
-                                enabled: true
-                            },
-                            suppressInfoWindows: false
-                        });
+                    } else if (this.id == "toggle-hiker-start-layer-button") {
+                        //Toggle Hiker Start Location Layer
+                        if (!toggle_hiker_start_layer_button_pressed) {
+                            hiker_start_layer.setMap(map);
+                            toggle_hiker_start_layer_button_pressed = true;
+                        } else {
+                            hiker_start_layer.setMap(null);
+                            toggle_hiker_start_layer_button_pressed = false;
+                        }
+                    } else if (this.id == "toggle-hiker-dest-layer-button") {
+                        //Toggle Hiker Destination Layer
+                        if (!toggle_hiker_dest_layer_button_pressed) {
+                            hiker_dest_layer.setMap(map);
+                            toggle_hiker_dest_layer_button_pressed = true;
+                        } else {
+                            hiker_dest_layer.setMap(null);
+                            toggle_hiker_dest_layer_button_pressed = false;
+                        }
                     }
                 });
+                $("#toggle-northbound-hikers-box").change(function() {
+                    if (this.checked) {
+                        console.log("northbound hikers checked");
+                        $(this).attr("checked", true);
+                        northbound_hikers_box_checked = true;
+                    } else {
+                        console.log("northbound hikers unchecked");
+                        $(this).attr("checked", false);
+                        northbound_hikers_box_checked = true;
+                    }
+                });
+                $("#toggle-southbound-hikers-box").change(function() {
+                    if (this.checked) {
+                        console.log("southbound hikers checked");
+                        $(this).attr("checked", true);
+                        southbound_hikers_box_checked = true;
+                        state_change(toggle_at_centerline_button_pressed, toggle_at_shelter_button_pressed,
+                            toggle_hiker_start_layer_button_pressed, toggle_hiker_dest_layer_button_pressed,
+                            northbound_hikers_box_checked, southbound_hikers_box_checked);
+                    } else {
+                        console.log("southbound hikers unchecked");
+                        $(this).attr("checked", false);
+                        southbound_hikers_box_checked = false;
+                    }
+                });
+                function state_change(toggle_at_centerline_button_pressed, toggle_at_shelter_button_pressed,
+                            toggle_hiker_start_layer_button_pressed, toggle_hiker_dest_layer_button_pressed,
+                            northbound_hikers_box_checked, southbound_hikers_box_checked) {
+                    if (toggle_at_centerline_button_pressed) {
+                        
+                    }
+                }
             </script>
         </div>
     </div>
 </body>
 </html>
-
 <!-- For reference use client side work: C:\Users\Chris\Documents\College\CSS Server Backup\Client Side Web Programming (CS 3440) !-->
