--- a/Program/Client_Side/index.html
+++ b/Program/Client_Side/index.html
@@ -13,15 +13,20 @@
         <div id="map">
             <script id="map-script">
                 var map;
+                var centerline_layer;
                 var shelterLayer;
                 var hiker_start_layer;
+                var northbound_start_layer;
+                var southbound_start_layer;
                 var hiker_dest_layer;
-                var centerline_layer;
+                var northbound_dest_layer;
+                var southbound_dest_layer;
+
 
                 function initMap() {
                     var mapOptions = {
                         center: {lat: 34.6271827, lng: -84.1938217},
-                        zoom: 10,
+                        zoom: 5,
                         mapTypeId: google.maps.MapTypeId.ROADMAP
                     };
                     map = new google.maps.Map(document.getElementById('map'), mapOptions);
@@ -54,6 +59,28 @@
                         },
                         suppressInfoWindows: false
                     });
+                    northbound_start_layer = new google.maps.FusionTablesLayer({
+                        query: {
+                            select: 'start_lat',
+                            from: '1JUAkUL5H7IhU4QrmLuVQ65Tg2SNyI5Xqm3A7Nk1g',
+                            where: "dir = 'Northbound'"
+                        },
+                        heatmap: {
+                            enabled: true
+                        },
+                        suppressInfoWindows: false
+                    });
+                    southbound_start_layer = new google.maps.FusionTablesLayer({
+                        query: {
+                            select: 'start_lat',
+                            from: '1JUAkUL5H7IhU4QrmLuVQ65Tg2SNyI5Xqm3A7Nk1g',
+                            where: "'dir' = 'Southbound'"
+                        },
+                        heatmap: {
+                            enabled: true
+                        },
+                        suppressInfoWindows: false
+                    });
                     hiker_dest_layer = new google.maps.FusionTablesLayer({
                         query: {
                             select: 'dest_lat',
@@ -64,7 +91,28 @@
                         },
                         suppressInfoWindows: false
                     });
-
+                    northbound_dest_layer = new google.maps.FusionTablesLayer({
+                        query: {
+                            select: 'dest_lat',
+                            from: '1JUAkUL5H7IhU4QrmLuVQ65Tg2SNyI5Xqm3A7Nk1g',
+                            where: "'dir' = 'Northbound'"
+                        },
+                        heatmap: {
+                            enabled: true
+                        },
+                        suppressInfoWindows: false
+                    });
+                    southbound_dest_layer = new google.maps.FusionTablesLayer({
+                        query: {
+                            select: 'dest_lat',
+                            from: '1JUAkUL5H7IhU4QrmLuVQ65Tg2SNyI5Xqm3A7Nk1g',
+                            where: "'dir' = 'Southbound'"
+                        },
+                        heatmap: {
+                            enabled: true
+                        },
+                        suppressInfoWindows: false
+                    });
                 }
             </script>
             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCjde_rx_Fe0v4G_vD-uI33M1o9toMF2A&callback=initMap">
@@ -98,26 +146,46 @@
                             console.log("Status: " + status);
                         }
                     );
-                    $("#toggle-northbound-hikers-box").attr("checked", true);
-                    $("#toggle-southbound-hikers-box").attr("checked", true);
                 }
             </script>
         </div>
         <div id="dev-controls">
-            <button id="toggle-at-centerline-button" type="button">Toggle AT Centerline Layer</button>
-            <button id="toggle-at-shelter-button" type="button">Toggle AT Shelter Layer</button>
-            <button id="toggle-hiker-start-layer-button" type="button">Toggle Hiker Start Location Layer</button>
-            <button id="toggle-hiker-dest-layer-button" type="button">Toggle Hiker Destination Location Layer</button>
-            <input id="toggle-northbound-hikers-box" type="checkbox">Northbound Hikers
-            <input id="toggle-southbound-hikers-box" type="checkbox">Southbound Hikers
-            <input id="toggle-single-point-hikers-box" type="checkbox">Single Point Hikers
+            <table id="control-panel">
+                <tr>
+                    <td>Northbound Hikers:</td>
+                    <td>Global:</td>
+                    <td>Southbound Hikers:</td>
+                </tr>
+                <tr>
+                    <td>
+                        <button id="northbound-start-layer-button">Toggle Northbound Hiker's Start Location Layer</button>
+                    </td>
+                    <td>
+                        <button id="toggle-at-centerline-button" type="button">Toggle AT Centerline Layer</button>
+                    </td>
+                    <td>
+                        <button id="southbound-start-layer-button">Toggle Southbound Hiker's Start Location Layer</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button id="northbound-dest-layer-button">Toggle Northbound Hiker's Destination Location Layer</button>
+                    </td>
+                    <td>
+                        <button id="toggle-at-shelter-button" type="button">Toggle AT Shelter Layer</button>
+                    </td>
+                    <td>
+                        <button id="southbound-dest-layer-button">Toggle Southbound Hiker's Destination Location Layer</button>
+                    </td>
+                </tr>
+            </table>
             <script type="text/javascript" id="init-hiker-layers-script">
                 var toggle_at_centerline_button_pressed = false;
                 var toggle_at_shelter_button_pressed = false;
-                var toggle_hiker_start_layer_button_pressed = false;
-                var toggle_hiker_dest_layer_button_pressed = false;
-                var northbound_hikers_box_checked = true;
-                var southbound_hikers_box_checked = true;
+                var northbound_start_button_pressed = false;
+                var southbound_start_button_pressed = false;
+                var northbound_dest_button_pressed = false;
+                var southbound_dest_button_pressed = false;
 
                 $("button").click(function() {
                     console.log(this.id + " button was pressed.");
@@ -139,58 +207,44 @@
                             shelterLayer.setMap(null);
                             toggle_at_shelter_button_pressed = false;
                         }
-                    } else if (this.id == "toggle-hiker-start-layer-button") {
-                        //Toggle Hiker Start Location Layer
-                        if (!toggle_hiker_start_layer_button_pressed) {
-                            hiker_start_layer.setMap(map);
-                            toggle_hiker_start_layer_button_pressed = true;
+                    } else if (this.id == "northbound-start-button") {
+                        //Toggle Northbound Hiker Start Location Layer
+                        if (!northbound_start_button_pressed) {
+                            northbound_start_layer.setMap(map);
+                            northbound_start_button_pressed = true;
                         } else {
-                            hiker_start_layer.setMap(null);
-                            toggle_hiker_start_layer_button_pressed = false;
+                            northbound_start_layer.setMap(null);
+                            northbound_start_button_pressed = false;
                         }
-                    } else if (this.id == "toggle-hiker-dest-layer-button") {
-                        //Toggle Hiker Destination Layer
-                        if (!toggle_hiker_dest_layer_button_pressed) {
-                            hiker_dest_layer.setMap(map);
-                            toggle_hiker_dest_layer_button_pressed = true;
+                    } else if (this.id == "northbound-dest-button") {
+                        //Toggle Northbound Hiker Destination Layer
+                        if (!northbound_dest_button_pressed) {
+                            northbound_dest_layer.setMap(map);
+                            northbound_dest_button_pressed = true;
                         } else {
-                            hiker_dest_layer.setMap(null);
-                            toggle_hiker_dest_layer_button_pressed = false;
+                            northbound_dest_layer.setMap(null);
+                            northbound_dest_button_pressed = false;
+                        }
+                    } else if (this.id == "southbound-start-button") {
+                        //Toggle Southbound Hiker Start Location Layer
+                        if (!southbound_start_button_pressed) {
+                            southbound_start_layer.setMap(map);
+                            southbound_start_button_pressed = true;
+                        } else {
+                            southbound_start_layer.setMap(null);
+                            southbound_start_button_pressed = false;
+                        }
+                    } else if (this.id == "southbound-dest-button") {
+                        //Toggle Southbound Hiker Destination Location Layer
+                        if (!southbound_dest_button_pressed) {
+                            southbound_dest_layer.setMap(map);
+                            southbound_dest_button_pressed = true;
+                        } else {
+                            southbound_dest_layer.setMap(null);
+                            southbound_dest_button_pressed = false;
                         }
                     }
                 });
-                $("#toggle-northbound-hikers-box").change(function() {
-                    if (this.checked) {
-                        console.log("northbound hikers checked");
-                        $(this).attr("checked", true);
-                        northbound_hikers_box_checked = true;
-                    } else {
-                        console.log("northbound hikers unchecked");
-                        $(this).attr("checked", false);
-                        northbound_hikers_box_checked = true;
-                    }
-                });
-                $("#toggle-southbound-hikers-box").change(function() {
-                    if (this.checked) {
-                        console.log("southbound hikers checked");
-                        $(this).attr("checked", true);
-                        southbound_hikers_box_checked = true;
-                        state_change(toggle_at_centerline_button_pressed, toggle_at_shelter_button_pressed,
-                            toggle_hiker_start_layer_button_pressed, toggle_hiker_dest_layer_button_pressed,
-                            northbound_hikers_box_checked, southbound_hikers_box_checked);
-                    } else {
-                        console.log("southbound hikers unchecked");
-                        $(this).attr("checked", false);
-                        southbound_hikers_box_checked = false;
-                    }
-                });
-                function state_change(toggle_at_centerline_button_pressed, toggle_at_shelter_button_pressed,
-                            toggle_hiker_start_layer_button_pressed, toggle_hiker_dest_layer_button_pressed,
-                            northbound_hikers_box_checked, southbound_hikers_box_checked) {
-                    if (toggle_at_centerline_button_pressed) {
-                        
-                    }
-                }
             </script>
         </div>
     </div>
