Turned On Info Windows for AT Shelters
Decided to enable info windows for the AT shelters layer.

--- a/Program/Client_Side/index.html
+++ b/Program/Client_Side/index.html
@@ -46,7 +46,7 @@
                             select: 'lat',
                             from: '1pyLD00bTsB_lBIQtxnOmC_-pfEtjrJJzw0q7PNAJ'
                         },
-                        suppressInfoWindows: true
+                        suppressInfoWindows: false
                     });
                     hiker_start_layer = new google.maps.FusionTablesLayer({
                         query: {
